UI:756699:TPR-250 left block alignment fix in PLP

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -61132,7 +61132,6 @@ body.template-pages-layout-footwearCategoryLandingPage .listing-leftmenu .checkb
 	letter-spacing: 0.4px;
 }
 @media(min-width:791px){
-	body.page-productGrid  .listing.wrapper .left-block,
 	body.template-pages-layout-apparelCategoryLandingPage  .listing.wrapper .left-block,
 	body.template-pages-layout-apparelCategoryLandingPageV1  .listing.wrapper .left-block,
 	body.template-pages-layout-electronicsCategoryLandingPage  .listing.wrapper .left-block,
@@ -61141,6 +61140,14 @@ body.template-pages-layout-footwearCategoryLandingPage .listing-leftmenu .checkb
 	body.template-pages-layout-footwearCategoryLandingPage  .listing.wrapper .left-block{
 	margin-top:	83px !important;
 }
+/*TPR-250 defect fix Left Block Alignment*/
+body.page-productGrid  .listing.wrapper .left-block{
+	margin-top: 63px;
+}		
+body.page-productGrid .facet-list.filter-opt ~ .left-block{
+	margin-top: -40px;
+}
+/*TPR-250 defect fix Left Block Alignment*/
 }
 
 /* UF-58 for PLP ends */
@@ -62788,8 +62795,16 @@ body.page-productGrid .list_title h1 {
     margin-left: 292px;
 	position: absolute;
     margin-top: 22px;
-    
 }
+/*TPR-250 defect fix No result*/
+body.page-productGrid .list_title h1.shiftDownZero{
+	top: 30px;
+    width: 100%;
+}
+body.page-productGrid .list_title h1{
+	display:none;
+}
+/*TPR-250 defect fix No result*/
 }
 .list_title .UlContainer {
     float: right;
